--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">About</a>
+              <a class="nav-link js-scroll-trigger" href="#select">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Universities</a>
@@ -49,90 +49,123 @@
         </div>
       </div>
     </nav>
+    <section class="masthead features" id="features">
+      <div class="container h-100" style="padding-top: 80px;">
 
-    <header class="masthead">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-lg-7 my-auto">
-            <div class="header-content mx-auto">
-              <h1 class="mb-5">Targenda is the easiest way to organize college life!</h1>
-              <a href="#features" class="btn btn-outline btn-xl js-scroll-trigger">Learn More</a>
-            </div>
-          </div>
-          <div class="col-lg-5 my-auto">
-            <div class="device-container">
-              <div class="device-mockup iphone6_plus portrait white">
-                <div class="device">
-                  <div class="screen">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="" class="img-fluid" alt="">
+        <div class="section-heading text-center">
+          <h2><b>Let us do the work for you!</b></h2>
+          <p class="text-muted" style="color:white !important; font-size: 24px;">Why waste time organizing when you could be studying? We got your back.</p>
+          <hr style="border-color:white;">
+        </div>
+
+        <div class="row">
+
+             <div class="col-lg-6">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-calendar text-primary"></i>
+                    <h3>Course Select</h3>
+<!--                     <p class="text-muted">Pick the courses you enrolled in</p> -->
                   </div>
-                  <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-event text-primary"></i>
+                    <h3>Customize</h3>
+<!--                     <p class="text-muted">Add custom events to your calendar</p> -->
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-screen-smartphone text-primary"></i>
+                    <h3>Text Reminders</h3>
+<!--                     <p class="text-muted">You're not going to miss a thing!</p> -->
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="feature-item">
+                    <i class="icon-fire text-primary"></i>
+                    <h3>Done</h3>
+<!--                     <p class="text-muted">A semester worth of organizing done in minutes</p> -->
                   </div>
                 </div>
               </div>
+            </div>         
+
+          <div class="col-lg-6 my-auto" style="margin:auto;">
+            <div class="device-container" style="margin-top: -10%;" >
+              <div class="device-mockup imac portrait white">
+                <div class="device">
+                  <div class="screen">
+                    <img src="" class="img-fluid" alt="">
+                  </div>
+                  <div class="button">
+                  </div>
+                </div>
+              </div>
+            <div class="center-block">
+             <a href="getstarted.html" class="center-block btn btn-outline btn-xl js-scroll-trigger" style=" margin-top: 10%;">Get Started</a> 
+            </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="features" id="select" >
+      <div class="container">
+        <div class="row">
+          <div class="col col-lg-3">
+            <div class="feature-item">
+              <i class="icon-calendar text-primary" style="background-color:#4B9CD3 !important"></i>
+  <!--                     <p class="text-muted">Pick the courses you enrolled in</p> -->
+            </div>
+          </div>
+          <div class="col col-lg-9">
+            <h2 style="padding-top: 50px;">
+              Select your courses and have your due dates synced instantly.
+            </h2>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="features" id="customize" style="background-color: #ebf3fa">
+      <div class="container">
+        <div class="row">
+          <div class="col col-lg-9">
+             <h2 style="padding-top: 50px;">
+              Add personal events and customize with groovy color themes.
+            </h2>
+          </div>
+          <div class="col col-lg-3">
+            <div class="feature-item">
+              <i class="icon-event text-primary" style="background-color:#4B9CD3 !important"></i>
+  <!--                     <p class="text-muted">Pick the courses you enrolled in</p> -->
             </div>
           </div>
         </div>
       </div>
-    </header>
+    </section>
 
-    <section class="features" id="features">
+    <section class="features" id="reminders">
       <div class="container">
-        <div class="section-heading text-center">
-          <h2>Let us do the work for you!</h2>
-          <p class="text-muted">Why waste time organizing when you could be studying? We got your back.</p>
-          <hr>
-        </div>
         <div class="row">
-          <div class="col-lg-4 my-auto" style="margin:auto">
-            <div class="device-container" style="margin-top: -20%;">
-              <div class="device-mockup imac portrait white">
-                <div class="device">
-                  <div class="screen">
-                    <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="" class="img-fluid" alt="">
-                  </div>
-                  <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                  </div>
-                </div>
-              </div>
+          <div class="col col-lg-3">
+            <div class="feature-item">
+              <i class="icon-screen-smartphone text-primary" style="background-color:#4B9CD3 !important"></i>
+<!--                     <p class="text-muted">You're not going to miss a thing!</p> -->
             </div>
           </div>
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-lg-3">
-                  <div class="feature-item">
-                    <i class="icon-calendar text-primary"></i>
-                    <h3>Course Select</h3>
-                    <p class="text-muted">Pick the courses you enrolled in</p>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="feature-item">
-                    <i class="icon-event text-primary"></i>
-                    <h3>Customize</h3>
-                    <p class="text-muted">Add custom events to your calendar</p>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="feature-item">
-                    <i class="icon-screen-smartphone text-primary"></i>
-                    <h3>Text Reminders</h3>
-                    <p class="text-muted">You're not going to miss a thing!</p>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="feature-item">
-                    <i class="icon-fire text-primary"></i>
-                    <h3>Done</h3>
-                    <p class="text-muted">A semester worth of organizing done in minutes</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="col col-lg-9">
+            <h2 style="padding-top: 50px;">
+              Never forget about an assignment again with text reminders.
+            </h2>
+          </div>
         </div>
       </div>
     </section>
@@ -145,6 +178,11 @@
             <div class="col-sm-2" style="margin:auto">
                 <div class="ratio img-responsive img-circle" style="background-image: url(img/unc.png);"></div>
             </div>
+          </div>
+        </div>
+        <div class="row" style="padding-top: 50px;">
+          <div class="col col-lg-12">
+            <h5 style="color:white">Don't see your school? <a class="school-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfGVlHg6RF31MeiN33lH_jnzjKGVxD5ISedGbG-4EjNiMjqAA/viewform?usp=sf_link">Click Here</a></h5>       
           </div>
         </div>
       </div>
